<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/hw7user_pic_edit"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/hw7_user_pic" />

        <EditText
            android:id="@+id/hw7_user_pic_link_edit"
            style="@style/EditTextStyleHW7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/hw7user_pic_edit"
            android:layout_toRightOf="@+id/hw7user_pic_edit"
            android:hint="@string/hw7_pic_edit"
            android:maxHeight="65dp"
            android:padding="0dp" />

        <Button
            android:id="@+id/hw7_btn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/hw7user_pic_edit"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_toEndOf="@+id/hw7user_pic_edit"
            android:layout_toRightOf="@+id/hw7user_pic_edit"
            android:text="@string/hw7_btn_check"
            android:textAllCaps="false" />

    </RelativeLayout>

    <EditText
        android:id="@+id/hw7_user_name_edit"
        style="@style/EditTextStyleHW7"
        android:layout_marginTop="10dp"
        android:hint="@string/hw7_name_edit" />

    <EditText
        android:id="@+id/hw7_user_sur_edit"
        style="@style/EditTextStyleHW7"
        android:layout_marginTop="10dp"
        android:hint="@string/hw7_sur_edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/hw7_btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hw7_btn_save"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/hw7_btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hw7_btn_delete"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>