<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/hw3EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hw3_link"
        android:paddingTop="20dp"
        android:textColorHint="@color/colorHintText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/hw3BtnReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:text="@string/hw3_ready"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp" />

        <Button
            android:id="@+id/hw3BtnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/hw3_clear"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/hw3ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/hw3ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />


</LinearLayout>